--- a/src/pages/terminados/terminados.component.html
+++ b/src/pages/terminados/terminados.component.html
@@ -1,11 +1,10 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
+    <ion-title>Lista de terminados</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <h2>No hay nada que ver</h2>
 
 </ion-content>
